# gdps-switcher

./: .gitignore  CMakeLists.txt  Credits.md  README.md  ServerIntegration.md  about.md  changelog.md  compile_commands.json  logo.pdn  logo.psd  mod.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-debug.yml  build-release.yml  build.yml  debug.build.yml  multi-platform.yml  release-build.yml  sync.yml
ServerImpl/config/: gdpsSwitcher.php
ServerImpl/switcher/: getInfo.php
config/: gdpsSwitcher.php
include/: GDPSUtils.hpp  Types.hpp
src/: ServerSwitchLayer.cpp  ServerSwitchLayer.hpp  main.cpp
src/apis/: GDPSUtils.cpp  URIHandler.cpp
src/hooks/: AtExit.cpp  CCApplicaton.cpp  CCDirector.cpp  CCHttpClient-WebRequest.cpp  CCHttpClient.cpp  CreatorLayer.cpp  DailyLevelPage.cpp  DataSave.cpp  GManager.cpp  GManager.hpp  MenuLayer.cpp  MusicDownloadManager.cpp
src/ui/: BonusSettingsPopup.cpp  BonusSettingsPopup.hpp  ColorLabel.cpp  ColorLabel.hpp  EditServersPopup.cpp  EditServersPopup.hpp  ModifyServerPopup.cpp  ModifyServerPopup.hpp  RecoveryPopup.hpp  ServerListLayer.cpp  ServerListLayer.hpp  ServerNode.cpp  ServerNode.hpp  ServerPopup.hpp  ServerSwitchLayer.cpp  ServerSwitchLayer.hpp
src/ui/extra/: Drag.cpp  Drag.hpp
src/utils/: DataManager.cpp  DataManager.hpp  GDPSMain.cpp  GDPSMain.hpp  GDPSManager.hpp  GDPSUtils.cpp  InstanceManager  InstanceManager.hpp  MigrationManager.cpp  MigrationManager.hpp  PSUtils.cpp  PSUtils.hpp  PopupSetting.cpp  ServerConfigManager.hpp  ServerInfoManager.cpp  ServerInfoManager.hpp  URIManager.cpp  URIManager.cpp.thisisdisables
switcher/: getInfo.php
